slurm_output_6159158.out
============================================================================================== 
Warning! Mixing Conda and module environments may lead to corruption of the
user environment. 
We do not recommend users mixing those two environments unless absolutely
necessary. Note that 
SURF does not provide any support for Conda environment.
For more information, please refer to our software policy page:
https://servicedesk.surf.nl/wiki/display/WIKI/Software+policy+Snellius#SoftwarepolicySnellius-UseofAnacondaandMinicondaenvironmentsonSnellius 

Remember that many packages have already been installed on the system and can
be loaded using 
the 'module load <package__name>' command. If you are uncertain if a package is
already available 
on the system, please use 'module avail' or 'module spider' to search for it.
============================================================================================== 
From https://github.com/JuliusHuizing/master-thesis-ds
   168e40b..ae41169  main       -> origin/main
Updating 168e40b..ae41169
Fast-forward
 pipeline.py | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
  File "pipeline.py", line 39
    '--border_ratio' str(border_ratio),
                     ^
SyntaxError: invalid syntax

JOB STATISTICS
==============
Job ID: 6159158
Cluster: snellius
User/Group: jhuizing/jhuizing
State: RUNNING
Nodes: 1
Cores per node: 18
CPU Utilized: 00:00:00
CPU Efficiency: 0.00% of 00:03:18 core-walltime
Job Wall-clock time: 00:00:11
Memory Utilized: 0.00 MB (estimated maximum)
Memory Efficiency: 0.00% of 120.00 GB (120.00 GB/node)
WARNING: Efficiency statistics may be misleading for RUNNING jobs.
